@@ -1,5 +1,11 @@
 .user{:id => "tweet_user-#{user.id}-#{name}"}
   = link_to image_tag(user.photo), twitter_path(user.screen_name)
+  .follow
+    - if current_user && current_user.follows_user?(user)
+      = "following!"
+    - else
+      = "follow me"
+
   .body
     %span.who= "@#{user.screen_name}"
     %span.when= t('user.created_at', :time => time_ago_in_words(user.created_at))
